# ComfyUI-Prompt-Assistant

./: README.en.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-TW.md  __init__.py  config_manager.py  pyproject.toml  server.py  test_load.py  translate_locales.py  translate_locales_deep.py  translate_locales_googletrans.py
config/: config_template.json  system_prompts_template.json
js/: index.js
js/css/: uiComponents.css
js/modules/: apiConfigManager.js  rulesConfigManager.js  settings.js  uiComponents.js
js/utils/: uiI18n.js
locales/ar/: nodeDefs.json  ui.json
locales/en/: nodeDefs.json  ui.json
locales/es/: nodeDefs.json  ui.json
locales/fa/: nodeDefs.json  ui.json
locales/fr/: nodeDefs.json  ui.json
locales/ja/: nodeDefs.json  ui.json
locales/ko/: nodeDefs.json  ui.json
locales/pt-BR/: nodeDefs.json  ui.json
locales/ru/: nodeDefs.json  ui.json
locales/tr/: nodeDefs.json  ui.json
locales/zh/: nodeDefs.json  ui.json
locales/zh-TW/: nodeDefs.json  ui.json
node/: expand_node.py  image_caption_node.py  kontext_preset_node.py  multi_image_fusion_node.py  translate_node.py  video_caption_node.py
node/base/: base_node.py  llm_node_base.py  vlm_node_base.py
services/: llm.py  model_list.py  openai_base.py  thinking_control.py  vlm.py
utils/: common.py  migration_tool.py
